--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
-    "react-loader-spinner": "^5.4.5"
+    "react-loader-spinner": "^5.4.5",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "autoprefixer": "latest",
